--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 </head>
 <body>
   <div class="box">
-    우리 학교 소개하기
+    영어
+[구술형]우리 학교 소개하기
+-일시: 9월 23일 화요일 룬투 영어수업시간
+-주제: 우리 학교 소개하기
+-발표시간: 인당 2분 내외
+  1) 발표시간은 평가요소에 포함되므로 시간 엄수
+  2) 2분에서 30초 이상 모자랄 경우 감점, 초과할 경우 30초까지 인정
+-발표순서: 각반 실장이 램덤 제비뽑기로 선정 후 명단 제출
+-제출사항: 매 차시 학습지 제출
   </div>
 </body>
 </html>
