--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>영어 수행평가 정보</title>
+  <title>국어 내신 범위</title>
   <style>
     body {
       margin: 0;
@@ -17,27 +17,55 @@
     }
     .box {
       background: white;
-      padding: 40px 60px;
+      padding: 40px 30px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      font-size: 1.5rem;
-      font-weight: bold;
+      font-size: 1.2rem;
+      font-weight: 500;
       color: #333;
+      line-height: 1.8;
+      max-width: 600px;
+      width: 90%;
+    }
+    .box h2 {
+      font-size: 1.6rem;
+      margin-bottom: 20px;
       text-align: center;
+      color: #0077aa;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 8px;
     }
   </style>
 </head>
 <body>
   <div class="box">
-    영어
-[구술형]우리 학교 소개하기
--일시: 9월 23일 화요일 룬투 영어수업시간
--주제: 우리 학교 소개하기
--발표시간: 인당 2분 내외
-  1) 발표시간은 평가요소에 포함되므로 시간 엄수
-  2) 2분에서 30초 이상 모자랄 경우 감점, 초과할 경우 30초까지 인정
--발표순서: 각반 실장이 램덤 제비뽑기로 선정 후 명단 제출
--제출사항: 매 차시 학습지 제출
+    <h2>국어 내신 시험 범위</h2>
+
+    <ul>
+      <li><strong>구글 클래스룸에 시험범위 공지</strong></li>
+      <li>1-1. 문학의 해석과 생활화</li>
+      <li>2-1. 국어와 매체의 변화</li>
+      <li>3-1. 매체를 보는 다양한 시선</li>
+    </ul>
+
+    <ul>
+      <li><strong>수업시간에 받은 학습지들</strong></li>
+      <li><strong>교과서 범위:</strong>
+        <ul>
+          <li>문학의 해석과 생활화: 8~18쪽</li>
+          <li>매체를 보는 다양한 시선: 82~87쪽</li>
+        </ul>
+      </li>
+      <li><strong>학습지 범위:</strong> 위 교과서 내용 관련 학습활동을 위해 배부된 학습지 전부<br>
+      (구글 클래스룸에 공유된 자료 참조)</li>
+      <li><strong>학습지 페이지:</strong> 1쪽 ~ 18쪽<br>
+        (중간중간 새로 나눠 준 것과 폐기할 것을 잘 구분할 것)
+      </li>
+    </ul>
   </div>
 </body>
 </html>
