--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>국어 내신 범위</title>
+  <title>중간고사 내신 범위</title>
   <style>
     body {
       margin: 0;
@@ -20,38 +20,39 @@
       padding: 40px 30px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 500;
       color: #333;
       line-height: 1.8;
-      max-width: 600px;
+      max-width: 700px;
       width: 90%;
     }
-    .box h2 {
+    h2 {
       font-size: 1.6rem;
-      margin-bottom: 20px;
-      text-align: center;
+      margin-bottom: 10px;
       color: #0077aa;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
     }
     ul {
       padding-left: 20px;
+      margin-top: 5px;
+      margin-bottom: 20px;
     }
     li {
-      margin-bottom: 8px;
+      margin-bottom: 6px;
     }
   </style>
 </head>
 <body>
   <div class="box">
-    <h2>국어 내신 시험 범위</h2>
-
+    <h2>📘 국어</h2>
     <ul>
       <li><strong>구글 클래스룸에 시험범위 공지</strong></li>
       <li>1-1. 문학의 해석과 생활화</li>
       <li>2-1. 국어와 매체의 변화</li>
       <li>3-1. 매체를 보는 다양한 시선</li>
     </ul>
-
     <ul>
       <li><strong>수업시간에 받은 학습지들</strong></li>
       <li><strong>교과서 범위:</strong>
@@ -60,11 +61,22 @@
           <li>매체를 보는 다양한 시선: 82~87쪽</li>
         </ul>
       </li>
-      <li><strong>학습지 범위:</strong> 위 교과서 내용 관련 학습활동을 위해 배부된 학습지 전부<br>
-      (구글 클래스룸에 공유된 자료 참조)</li>
-      <li><strong>학습지 페이지:</strong> 1쪽 ~ 18쪽<br>
-        (중간중간 새로 나눠 준 것과 폐기할 것을 잘 구분할 것)
-      </li>
+      <li><strong>학습지 범위:</strong> 위 교과서 내용 관련 학습활동을 위해 배부된 학습지 전부 (구글 클래스룸에 공유된 자료 참조)</li>
+      <li><strong>학습지 페이지:</strong> 1쪽 ~ 18쪽 (중간중간 새로 나눠 준 것과 폐기할 것을 잘 구분할 것)</li>
+    </ul>
+
+    <h2>📗 영어</h2>
+    <ul>
+      <li><strong>본문:</strong> 1, 2단원</li>
+      <li><strong>모의고사:</strong> 총 10개 중 6개</li>
+    </ul>
+
+    <h2>📙 수학</h2>
+    <ul>
+      <li><strong>1단원:</strong> 원의 방정식까지 (※ 원과 직선은 제외)</li>
+      <li><strong>2단원:</strong> 전체</li>
+      <li><strong>3단원:</strong> 함수의 뜻과 그래프만</li>
+      <li><strong>자료:</strong> 수업시간에 받은 학습지와 교과서 위주</li>
     </ul>
   </div>
 </body>
