--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       font-weight: 500;
       color: #333;
       line-height: 1.8;
-      max-width: 700px;
+      max-width: 750px;
       width: 90%;
+      overflow-y: auto;
+      max-height: 95vh;
     }
     h2 {
       font-size: 1.6rem;
@@ -61,8 +63,8 @@
           <li>매체를 보는 다양한 시선: 82~87쪽</li>
         </ul>
       </li>
-      <li><strong>학습지 범위:</strong> 위 교과서 내용 관련 학습활동을 위해 배부된 학습지 전부 (구글 클래스룸에 공유된 자료 참조)</li>
-      <li><strong>학습지 페이지:</strong> 1쪽 ~ 18쪽 (중간중간 새로 나눠 준 것과 폐기할 것을 잘 구분할 것)</li>
+      <li><strong>학습지 범위:</strong> 관련 학습활동을 위한 전체 학습지 (구글 클래스룸 참조)</li>
+      <li><strong>학습지 페이지:</strong> 1쪽 ~ 18쪽 (새로 배부된 것과 폐기한 것 구분)</li>
     </ul>
 
     <h2>📗 영어</h2>
@@ -77,6 +79,24 @@
       <li><strong>2단원:</strong> 전체</li>
       <li><strong>3단원:</strong> 함수의 뜻과 그래프만</li>
       <li><strong>자료:</strong> 수업시간에 받은 학습지와 교과서 위주</li>
+    </ul>
+
+    <h2>📕 한국사</h2>
+    <ul>
+      <li><strong>교과서 범위:</strong>
+        <ul>
+          <li>p.8 ~ 47</li>
+          <li>p.52 ~ 56</li>
+          <li>p.64 ~ 66</li>
+        </ul>
+      </li>
+      <li><strong>학습지:</strong> No.1 ~ No.8</li>
+      <li><strong>문항 유형 및 점수:</strong>
+        <ul>
+          <li>객관식: 18문항 (총 50점)</li>
+          <li>서술형: 5문항 (총 50점)</li>
+        </ul>
+      </li>
     </ul>
   </div>
 </body>
