--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>중간고사 내신 범위</title>
   <style>
     body {
@@ -19,7 +19,7 @@
       background: white;
       padding: 40px 30px;
       border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       font-size: 1.1rem;
       font-weight: 500;
       color: #333;
@@ -71,6 +71,7 @@
     <ul>
       <li><strong>본문:</strong> 1, 2단원</li>
       <li><strong>모의고사:</strong> 총 10개 중 6개</li>
+      <li><strong>교과서 문제 출제:</strong> 23쪽, 24쪽 2번 문제에서 2개의 문제가 시험에 출제</li>
     </ul>
 
     <h2>📙 수학</h2>
